--- a/js_client/index.html
+++ b/js_client/index.html
@@ -12,7 +12,12 @@
         <input type="submit" value="Login"/>
     </form>
 
+    <div id="content-container"></div>
+
     <script src="./client.js"></script>
+
+
+
 
 
 </body>
