--- a/js_client/index.html
+++ b/js_client/index.html
@@ -21,6 +21,11 @@
 
     <div id="content-container"></div>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.18.0/dist/algoliasearch-lite.umd.js" integrity="sha256-V3GHVlMSAsogT3wL0OY/l4d3fRLa56gNzlnzdIMBIWg=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.56.5/dist/instantsearch.production.min.js" integrity="sha256-HUihzhULZfSeNdovzhTpVqRjWABpyZCeeuZAEmMH/VE=" crossorigin="anonymous"></script>
+
+
     <script src="./client.js"></script>
 
 
